==> Danmuse/InductometerTRD_FRBA/Firmware & Software/Inductometer v2.0/ST7789 TFT scripts/Other examples/ST7789_DMA_STM32F1/st7789.cpp <==
#include "st7789.h"
#include <string.h>

static void ST7789_WriteCommand(uint8_t cmd)
{
  ST7789_Select();
  ST7789_DC_Clr();
  // SPI.beginTransaction(SPISettings (2000000, MSBFIRST, SPI_MODE0, DATA_SIZE_16BIT));  // 2 MHz clock, MSB first, mode 0
  SPI.write(&cmd, sizeof(cmd));
  // HAL_SPI_Transmit(&ST7789_SPI_PORT, &cmd, sizeof(cmd), HAL_MAX_DELAY);
  // SPI.endTransaction();
  ST7789_UnSelect();
}

static void ST7789_WriteData(uint8_t *buff, size_t buff_size)
{
  ST7789_Select();
  ST7789_DC_Set();

  // split data in small chunks because HAL can't send more than 64K at once

  while (buff_size > 0) {
    uint16_t chunk_size = buff_size > 65535 ? 65535 : buff_size;
    // SPI.beginTransaction(SPISettings (2000000, MSBFIRST, SPI_MODE0, DATA_SIZE_16BIT));  // 2 MHz clock, MSB first, mode 0
#ifdef USE_DMA
    if (DMA_MIN_SIZE <= buff_size)
    {
      SPI.dmaSend(buff, chunk_size, 0);
      // HAL_SPI_Transmit_DMA(&ST7789_SPI_PORT, buff, chunk_size);
      // while (ST7789_SPI_PORT.hdmatx->State != HAL_DMA_STATE_READY) {}
    }
    else
      SPI.write(buff, chunk_size);
      // HAL_SPI_Transmit(&ST7789_SPI_PORT, buff, chunk_size, HAL_MAX_DELAY);
#else
    SPI.write(buff, chunk_size);
    // HAL_SPI_Transmit(&ST7789_SPI_PORT, buff, chunk_size, HAL_MAX_DELAY);
#endif
    // SPI.endTransaction();
    buff += chunk_size;
    buff_size -= chunk_size;
  }

  ST7789_UnSelect();
}

static void ST7789_WriteSmallData(uint8_t data)
{
  ST7789_Select();
  ST7789_DC_Set();
  // SPI.beginTransaction(SPISettings (2000000, MSBFIRST, SPI_MODE0, DATA_SIZE_16BIT));  // 2 MHz clock, MSB first, mode 0
  SPI.write(&data, sizeof(data));
  // SPI.endTransaction();
  // HAL_SPI_Transmit(&ST7789_SPI_PORT, &data, sizeof(data), HAL_MAX_DELAY);
  ST7789_UnSelect();
}
